--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
         </div>
 
         <footer>
-            <p>Data Source: Google Sheets | Auto-updates every 5 minutes</p>
+            <p>Data Source: Kisan Sathi Portal </p>
         </footer>
     </div>
 
@@ -729,8 +729,8 @@
    - Example: *.github.io/*`);
         }
 
-        // Auto-refresh every 5 minutes
-        setInterval(() => { if (SHEET_ID !== 'YOUR_SHEET_ID_HERE') loadData(); }, 300000);
+        // Auto-refresh every 30 minutes
+        setInterval(() => { if (SHEET_ID !== 'YOUR_SHEET_ID_HERE') loadData(); }, 1800000000);
     </script>
 </body>
 
