--- a/index.html
+++ b/index.html
@@ -317,14 +317,14 @@
 
             <div class="stats-grid">
                 <div class="stat-card kashmir">
-                    <h3>🏔️ Kashmir Division</h3>
+                    <h3> Kashmir Division</h3>
                     <div class="value" id="kashmir-apps">0</div>
                     <p>Appl</p>
                     <div style="margin-top:8px;font-size:0.9em"><span id="kashmir-appr">0</span> Appr (<span
                             id="kashmir-rate">0%</span>)</div>
                 </div>
                 <div class="stat-card jammu">
-                    <h3>🌄 Jammu Division</h3>
+                    <h3> Jammu Division</h3>
                     <div class="value" id="jammu-apps">0</div>
                     <p>Appl</p>
                     <div style="margin-top:8px;font-size:0.9em"><span id="jammu-appr">0</span> Appr (<span
@@ -670,11 +670,11 @@
             let html = '<table><thead><tr>';
             html += '<th style="width:20%;white-space:normal;line-height:1.3;">Project</th>';
             html += '<th style="width:20%;white-space:normal;line-height:1.3;">Activity</th>';
-            html += '<th class="number" style="background:#1565c0;color:white;width:8%;font-size:11px;line-height:1.3;padding:10px 4px;">🏔️<br>Kmr<br>Applications</th>';
-            html += '<th class="number" style="background:#c62828;color:white;width:8%;font-size:11px;line-height:1.3;padding:10px 4px;">🌄<br>Jmu<br>Applications</th>';
+            html += '<th class="number" style="background:#1565c0;color:white;width:8%;font-size:11px;line-height:1.3;padding:10px 4px;">Kashmir<br>Applications</th>';
+            html += '<th class="number" style="background:#c62828;color:white;width:8%;font-size:11px;line-height:1.3;padding:10px 4px;">Jammu<br>Applications</th>';
             html += '<th class="number" style="background:#1a237e;color:white;width:8%;font-size:11px;line-height:1.3;padding:10px 4px;">📊<br>Total<br>Applications</th>';
-            html += '<th class="number" style="background:#0d47a1;color:white;width:8%;font-size:11px;line-height:1.3;padding:10px 4px;">🏔️<br>Kmr<br>Approvals</th>';
-            html += '<th class="number" style="background:#b71c1c;color:white;width:8%;font-size:11px;line-height:1.3;padding:10px 4px;">🌄<br>Jmu<br>Approvals</th>';
+            html += '<th class="number" style="background:#0d47a1;color:white;width:8%;font-size:11px;line-height:1.3;padding:10px 4px;">Kashmir<br>Approvals</th>';
+            html += '<th class="number" style="background:#b71c1c;color:white;width:8%;font-size:11px;line-height:1.3;padding:10px 4px;">Jammu<br>Approvals</th>';
             html += '<th class="number" style="background:#1b5e20;color:white;width:8%;font-size:11px;line-height:1.3;padding:10px 4px;">📊<br>Total<br>Approvals</th>';
             html += '<th class="number" style="background:#4a148c;color:white;width:8%;font-size:11px;line-height:1.3;padding:10px 4px;">🎯<br>5-Year<br>Targets</th>';
             html += '</tr></thead><tbody>';
