--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
         function populateFilters() {
             const projects = [...new Set(processedData.map(r => r.Project))].filter(p => p).sort();
             const select = document.getElementById('projectFilter');
-            select.innerHTML = '<option value="">📁 All Projects</option>';
+            select.innerHTML = '<option value="">All Projects</option>';
             projects.forEach(p => { const opt = document.createElement('option'); opt.value = p; opt.textContent = p; select.appendChild(opt); });
 
             document.getElementById('searchInput').addEventListener('input', renderActivityTable);
@@ -672,11 +672,11 @@
             html += '<th style="width:20%;white-space:normal;line-height:1.3;">Activity</th>';
             html += '<th class="number" style="background:#1565c0;color:white;width:8%;font-size:11px;line-height:1.3;padding:10px 4px;">Kashmir<br>Applications</th>';
             html += '<th class="number" style="background:#c62828;color:white;width:8%;font-size:11px;line-height:1.3;padding:10px 4px;">Jammu<br>Applications</th>';
-            html += '<th class="number" style="background:#1a237e;color:white;width:8%;font-size:11px;line-height:1.3;padding:10px 4px;">📊<br>Total<br>Applications</th>';
+            html += '<th class="number" style="background:#1a237e;color:white;width:8%;font-size:11px;line-height:1.3;padding:10px 4px;">Total<br>Applications</th>';
             html += '<th class="number" style="background:#0d47a1;color:white;width:8%;font-size:11px;line-height:1.3;padding:10px 4px;">Kashmir<br>Approvals</th>';
             html += '<th class="number" style="background:#b71c1c;color:white;width:8%;font-size:11px;line-height:1.3;padding:10px 4px;">Jammu<br>Approvals</th>';
-            html += '<th class="number" style="background:#1b5e20;color:white;width:8%;font-size:11px;line-height:1.3;padding:10px 4px;">📊<br>Total<br>Approvals</th>';
-            html += '<th class="number" style="background:#4a148c;color:white;width:8%;font-size:11px;line-height:1.3;padding:10px 4px;">🎯<br>5-Year<br>Targets</th>';
+            html += '<th class="number" style="background:#1b5e20;color:white;width:8%;font-size:11px;line-height:1.3;padding:10px 4px;">Total<br>Approvals</th>';
+            html += '<th class="number" style="background:#4a148c;color:white;width:8%;font-size:11px;line-height:1.3;padding:10px 4px;">5-Year<br>Targets</th>';
             html += '</tr></thead><tbody>';
 
             filtered.forEach(row => {
