--- a/index.html
+++ b/index.html
@@ -337,11 +337,18 @@
                     <div style="margin-top:8px;font-size:0.9em"><span id="total-appr">0</span> Appr (<span
                             id="total-rate">0%</span>)</div>
                 </div>
+                <div class="stat-card total" style="border-left:5px solid #00695c">
+                    <h3>✅ Total Estab</h3>
+                    <div class="value" id="total-estab">0</div>
+                    <p>Units Established</p>
+                    <div style="margin-top:8px;font-size:0.9em"><span id="estab-kashmir">0</span> Kmr, <span id="estab-jammu">0</span> Jmu</div>
+                    <div style="font-size:0.85em;color:#666;">(<span id="estab-rate-kmr">0%</span> Kmr, <span id="estab-rate-jmu">0%</span> Jmu of Appr)</div>
+                </div>
             </div>
 
             <div class="tabs">
                 <div class="tab active" onclick="showTab('overview')">📊 Overview</div>
-                <div class="tab" onclick="showTab('activities')">📋 Activity Details</div>
+                <div class="tab" onclick="showTab('activities')">📋 Application Processing</div>
                 <div class="tab" onclick="showTab('establishment')">✅ Establishment Data</div>
             </div>
 
@@ -360,7 +367,7 @@
 
             <div id="activities" class="tab-content">
                 <div class="table-section">
-                    <h2>📋 Project-wise Activity Details</h2>
+                    <h2>📋 Application Processing Details</h2>
                     <div class="controls">
                         <input type="text" id="searchInput" placeholder="🔍 Search project or activity...">
                         <select id="projectFilter">
@@ -702,6 +709,21 @@
             document.getElementById('total-apps').textContent = (kApps + jApps).toLocaleString();
             document.getElementById('total-appr').textContent = (kAppr + jAppr).toLocaleString();
             document.getElementById('total-rate').textContent = (kApps + jApps) > 0 ? (((kAppr + jAppr) / (kApps + jApps)) * 100).toFixed(1) + '%' : '0%';
+
+            // Calculate Establishment totals
+            let kEstab = 0, jEstab = 0;
+            if (estabData && estabData.length > 0) {
+                estabData.forEach(row => {
+                    kEstab += row['K-Estab'] || 0;
+                    jEstab += row['J-Estab'] || 0;
+                });
+            }
+
+            document.getElementById('total-estab').textContent = (kEstab + jEstab).toLocaleString();
+            document.getElementById('estab-kashmir').textContent = kEstab.toLocaleString();
+            document.getElementById('estab-jammu').textContent = jEstab.toLocaleString();
+            document.getElementById('estab-rate-kmr').textContent = kAppr > 0 ? ((kEstab / kAppr) * 100).toFixed(1) + '%' : '0%';
+            document.getElementById('estab-rate-jmu').textContent = jAppr > 0 ? ((jEstab / jAppr) * 100).toFixed(1) + '%' : '0%';
         }
 
         function initCharts() {
@@ -765,6 +787,10 @@
             html += '<th class="number" style="background:#4a148c;color:white;width:8%;font-size:11px;line-height:1.3;padding:10px 4px;">5-Year<br>Targets</th>';
             html += '</tr></thead><tbody>';
 
+            // Calculate totals for grand total row
+            let kApplTotal = 0, jApplTotal = 0, totalApplTotal = 0;
+            let kApprTotal = 0, jApprTotal = 0, totalApprTotal = 0;
+
             filtered.forEach(row => {
                 const tgt = getTarget(row.Project, row.Activity);
                 html += `<tr>
@@ -778,7 +804,26 @@
                     <td class="number" style="color:#1b5e20;background:#e8f5e9;font-weight:700">${row['Total-Appr'].toLocaleString()}</td>
                     <td class="number" style="color:#4a148c;background:#f3e5f5;font-weight:700">${tgt}</td>
                 </tr>`;
+                
+                kApplTotal += row['K-Appl'];
+                jApplTotal += row['J-Appl'];
+                totalApplTotal += row['Total-Appl'];
+                kApprTotal += row['K-Appr'];
+                jApprTotal += row['J-Appr'];
+                totalApprTotal += row['Total-Appr'];
             });
+
+            // Add grand total row
+            html += `<tr style="background:#f5f5f5;font-weight:bold;border-top:2px solid #333;">
+                <td colspan="2" style="text-align:right;padding:12px;"><strong>Grand Total:</strong></td>
+                <td class="number" style="color:#1565c0;background:#bbdefb;font-weight:700">${kApplTotal.toLocaleString()}</td>
+                <td class="number" style="color:#c62828;background:#ffcdd2;font-weight:700">${jApplTotal.toLocaleString()}</td>
+                <td class="number" style="color:#1a237e;background:#c5cae9;font-weight:700">${totalApplTotal.toLocaleString()}</td>
+                <td class="number" style="color:#0d47a1;background:#bbdefb;font-weight:700">${kApprTotal.toLocaleString()}</td>
+                <td class="number" style="color:#b71c1c;background:#ffcdd2;font-weight:700">${jApprTotal.toLocaleString()}</td>
+                <td class="number" style="color:#1b5e20;background:#c8e6c9;font-weight:700">${totalApprTotal.toLocaleString()}</td>
+                <td class="number" style="background:#e0e0e0;">-</td>
+            </tr>`;
 
             html += '</tbody></table>';
             container.innerHTML = html;
